# hpx_demo1

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  myHPXconfig.cmake  user-config.json  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
src/example/: CmakeLists.txt  example.cpp
src/hpx_serialization_basic/: CmakeLists.txt  hpx_serialization_basic.cpp
vcpkg_registry/ports/hpx/1.9.0-rc2/: portfile.cmake  vcpkg.json
vcpkg_registry/versions/: baseline.json
vcpkg_registry/versions/h-/: hpx.json
