message("*****************************************")
message("Building Examples -START-")
message("*****************************************")

add_subdirectory(example)
add_subdirectory(hpx_serialization_basic)

message("*****************************************")
message("Building Examples -DONE-")
message("*****************************************")
